--- a/index.html
+++ b/index.html
@@ -9,34 +9,53 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
 </head>
 
-<body style="background-color:#E5E5E5">
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container ">
+<body>
+    <header style=" background-color: #FFFBF0;">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="./images/logo.png" alt="" width="291px" height="39px"></a>
-
+                    <img src="./images/logo.png" alt="" width="291px" height="39px">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
-                        <li class="nav-item text-primary">
-                            <a class="nav-link" href="#">Product</a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#Product">Product</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About us</a>
+                            <a class="nav-link" href="#About us">About us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact us</a>
+                            <a class="nav-link" href="#Contact us">Contact us</a>
                         </li>
-
-
                     </ul>
-
                 </div>
             </div>
         </nav>
+        <div class="row m-5">
+            <div class="col-lg-7">
+                <h1>BE THE PENGUINS</br>OF WINTER</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis tempora ad sapiente
+                    qui
+                    ut minus harum cupiditate hic autem corporis.</p>
+
+                <button class="buy-button">
+                    <img src="./icons/shopping-cart 1.png" alt=""> Buy Now
+                </button>
+
+            </div>
+            <div class="col-lg-5">
+                <img src="./images/model.png" class="d-block w-100" alt="...">
+            </div>
+        </div>
+
     </header>
 
     <script src="./js/bootstrap.bundle.min.js"></script>
