--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -41,13 +42,14 @@
         </nav>
         <div class="row m-5">
             <div class="col-lg-7">
-                <h1>BE THE PENGUINS</br>OF WINTER</h1>
+                <h1 class="doller-color">BE THE PENGUINS</h1>
+                <h1>OF WINTER</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis tempora ad sapiente
                     qui
                     ut minus harum cupiditate hic autem corporis.</p>
 
                 <button class="buy-button">
-                    <img src="./icons/shopping-cart 1.png" alt=""> Buy Now
+                    <img src="./icons/shopping-cart 1.png" alt="" width="15%"> BUY NOW
                 </button>
 
             </div>
@@ -55,9 +57,112 @@
                 <img src="./images/model.png" class="d-block w-100" alt="...">
             </div>
         </div>
-
     </header>
+    <main>
+        <section class="container py-4">
+            <h2>WOMAN JACKET</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card border-0 shadow-lg h-100 p-3 jacket-border">
+                        <img src="./images/jacket-1.png" class="card-img-top jacket-color jacket-border" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Yellow Coat Jacket </h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae nobis
+                                neque excepturi iusto minus nulla.
+                                sint. .</p>
+                        </div>
+                        <div class="m-3 d-flex justify-content-between">
+                            <h5 class="doller-color">$234</h5>
+                            <button class="buy-button">BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border-0 shadow-lg h-100 p-3 jacket-border ">
+                        <img src="./images/jacket-2.png" class="card-img-top jacket-color jacket-border" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Ladies Jacket</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae nobis
+                                neque excepturi iusto minus nulla.
+                                sint. .</p>
+                        </div>
+                        <div class="m-3 d-flex justify-content-between">
+                            <h5 class="doller-color">$234</h5>
+                            <button class="buy-button">BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border-0 shadow-lg h-100 p-3 jacket-border">
+                        <img src="./images/jacket-3.png" class="card-img-top jacket-color jacket-border" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Woman Leather Jacket</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae nobis
+                                neque excepturi iusto minus nulla.
+                                sint. .</p>
+                        </div>
+                        <div class="m-3 d-flex justify-content-between">
+                            <h5 class="doller-color">$234</h5>
+                            <button class="buy-button">BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
 
+
+            </div>
+        </section>
+        <section class="container py-5">
+            <h2>MAN JACKET</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card border-0 shadow-lg h-100 p-3 jacket-border">
+                        <img src="./images/jacket-4.png" class="card-img-top jacket-color jacket-border" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Snowboard Jacket Mens </h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae nobis
+                                neque excepturi iusto minus nulla.
+                                sint. .</p>
+                        </div>
+                        <div class="m-3 d-flex justify-content-between">
+                            <h5 class="doller-color">$234</h5>
+                            <button class="buy-button">BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border-0 shadow-lg h-100 p-3 jacket-border ">
+                        <img src="./images/jacket-5.png" class="card-img-top jacket-color jacket-border" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Man Leather Jackets</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae nobis
+                                neque excepturi iusto minus nulla.
+                                sint. .</p>
+                        </div>
+                        <div class="m-3 d-flex justify-content-between">
+                            <h5 class="doller-color">$234</h5>
+                            <button class="buy-button">BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border-0 shadow-lg h-100 p-3 jacket-border">
+                        <img src="./images/jacket-6.png" class="card-img-top jacket-color jacket-border" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Man Casual Jackets</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae nobis
+                                neque excepturi iusto minus nulla.
+                                sint. .</p>
+                        </div>
+                        <div class="m-3 d-flex justify-content-between">
+                            <h5 class="doller-color">$234</h5>
+                            <button class="buy-button">BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+    </main>
     <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 
