--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
         </nav>
         <div class="row m-5">
-            <div class="col-lg-7">
+            <div class="col-lg-7 col-md-2 col-sm-1">
                 <h1 class="doller-color">BE THE PENGUINS</h1>
                 <h1>OF WINTER</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis tempora ad sapiente
@@ -53,7 +53,7 @@
                 </button>
 
             </div>
-            <div class="col-lg-5">
+            <div class="col-lg-5 col-md-2 col-sm-1">
                 <img src="./images/model.png" class="d-block w-100" alt="...">
             </div>
         </div>
@@ -163,6 +163,58 @@
             </div>
         </section>
     </main>
+    <section class="container d-flex justify-content-between my-5">
+        <div class="left-container col-lg-5 ">
+            <div class="card mb-3 shadow-lg jacket-border" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-3 ps-3 align-self-center">
+                        <img src="./icons/image 12.png" class="img-fluid rounded-start" alt="..." width="78px"
+                            height="82px">
+                    </div>
+                    <div class=" col-md-9">
+                        <div class="card-body">
+                            <h5 class="card-title">Find the Perfect Fit</h5>
+                            <p class="card-text">Everybody is different, which is why we
+                                offer styles for every body.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3 shadow-lg jacket-border" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-3 ps-3 align-self-center">
+                        <img src="./icons/image 13.png" class="img-fluid rounded-start" alt="..." width="78px"
+                            height="82px">
+                    </div>
+                    <div class="col-md-9">
+                        <div class="card-body">
+                            <h5 class="card-title">Free Exchanges</h5>
+                            <p class="card-text">One of the many reasons you can shop
+                                with peace of mind.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3 shadow-lg jacket-border" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-3 ps-3 align-self-center">
+                        <img src="./icons/image 14.png" class="img-fluid rounded-start" alt="..." width="78px"
+                            height="82px">
+                    </div>
+                    <div class="col-md-9">
+                        <div class="card-body">
+                            <h5 class="card-title">Contact Our Seller</h5>
+                            <p class="card-text">They are here to help you. That's quite
+                                literally what we pay them for.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="right-container col-lg-6 py-5 ">
+            <img src="./images/shopping.png" class="d-block w-100" alt="...">
+        </div>
+    </section>
     <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 
