--- a/index.html
+++ b/index.html
@@ -164,14 +164,14 @@
         </section>
     </main>
     <section class="container d-flex justify-content-between my-5">
-        <div class="left-container col-lg-5 ">
-            <div class="card mb-3 shadow-lg jacket-border" style="max-width: 540px;">
+        <div>
+            <div class=" card mb-3 shadow-lg jacket-border" style="max-width: 540px;">
                 <div class="row g-0">
-                    <div class="col-md-3 ps-3 align-self-center">
+                    <div class="col-lg-3 col-md-12 ps-3 align-self-center">
                         <img src="./icons/image 12.png" class="img-fluid rounded-start" alt="..." width="78px"
                             height="82px">
                     </div>
-                    <div class=" col-md-9">
+                    <div class=" col-lg-9 col-md-12">
                         <div class="card-body">
                             <h5 class="card-title">Find the Perfect Fit</h5>
                             <p class="card-text">Everybody is different, which is why we
@@ -182,11 +182,11 @@
             </div>
             <div class="card mb-3 shadow-lg jacket-border" style="max-width: 540px;">
                 <div class="row g-0">
-                    <div class="col-md-3 ps-3 align-self-center">
+                    <div class="col-lg-3 col-md-12 ps-3 align-self-center">
                         <img src="./icons/image 13.png" class="img-fluid rounded-start" alt="..." width="78px"
                             height="82px">
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-lg-9 col-md-12">
                         <div class="card-body">
                             <h5 class="card-title">Free Exchanges</h5>
                             <p class="card-text">One of the many reasons you can shop
@@ -197,11 +197,11 @@
             </div>
             <div class="card mb-3 shadow-lg jacket-border" style="max-width: 540px;">
                 <div class="row g-0">
-                    <div class="col-md-3 ps-3 align-self-center">
+                    <div class="col-lg-3 col-md-12 ps-3 align-self-center">
                         <img src="./icons/image 14.png" class="img-fluid rounded-start" alt="..." width="78px"
                             height="82px">
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-lg-9 col-md-12">
                         <div class="card-body">
                             <h5 class="card-title">Contact Our Seller</h5>
                             <p class="card-text">They are here to help you. That's quite
@@ -211,7 +211,7 @@
                 </div>
             </div>
         </div>
-        <div class="right-container col-lg-6 py-5 ">
+        <div class="col-lg-6 col-md-12 py-5 ">
             <img src="./images/shopping.png" class="d-block w-100" alt="...">
         </div>
     </section>
